--- a/tools/build-system/launchpad/sflphone-common-video/debian/control
+++ b/tools/build-system/launchpad/sflphone-common-video/debian/control
@@ -8,8 +8,8 @@ Standards-Version: 3.7.3
 Package: sflphone-common-video
 Priority: optional
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Replaces: sflphone-common
+Depends: ${shlibs:Depends}, ${misc:Depends}, libavcodec53 | libavcodec-extra-53, libdevice53 | libavdevice-extra-53, libavfilter2 | libavfilter-extra-2, libavformat53 | libavformat-extra-53, libswscale2 | libswscale-extra-2, libavutil51 | libavutil-extra-51
+Replaces: sflphone
 Conflicts: sflphone-common
 Homepage: http://www.sflphone.org
 Description: SIP and IAX2 compatible softphone - Core with video support
