--- a/gnome/src/Makefile.am
+++ b/gnome/src/Makefile.am
@@ -32,7 +32,6 @@ libsflphone_client_la_SOURCES = \
   shortcuts.c \
   str_utils.c \
   seekslider.c \
-  gtk2_wrappers.c \
   actions.h \
   sflnotify.h \
   mainwindow.h \
@@ -49,7 +48,6 @@ libsflphone_client_la_SOURCES = \
   logger.h \
   unused.h \
   str_utils.h \
-  gtk2_wrappers.h \
   seekslider.h \
   account_schema.h \
   history_loader.c \
@@ -60,19 +58,18 @@ libsflphone_client_la_LIBADD = @CLUTTER_LIBS@ @CLUTTERGTK_LIBS@ $(SFLPHONE_LIBS)
 libsflphone_client_la_LDFLAGS = @CLUTTER_LDFLAGS@ @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBS@ \
                                 @X11_LIBS@ @GTK_LIBS@ @GLIB_LIBS@ \
                                 $(DL_LIBS) @JAVASCRIPT_CORE_GTK_LIBS@ \
-                                @GTHREAD_LIBS@ @CLUTTERGTK_LDFLAGS@
+                                @CLUTTERGTK_LDFLAGS@
 
 libsflphone_client_la_CFLAGS = @CLUTTER_CFLAGS@ @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
                                @GTK_CFLAGS@ \
                                @JAVASCRIPT_CORE_GTK_CFLAGS@ \
-                               @GTHREAD_CFLAGS@ @CLUTTERGTK_CFLAGS@
+                               @CLUTTERGTK_CFLAGS@
 
 
 sflphone_client_gnome_SOURCES = main.c
 sflphone_client_gnome_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
                                @GTK_CFLAGS@ \
-                               @JAVASCRIPT_CORE_GTK_CFLAGS@ \
-                               @GTHREAD_CFLAGS@
+                               @JAVASCRIPT_CORE_GTK_CFLAGS@
 sflphone_client_gnome_LDADD = libsflphone_client.la
 
 # add symbolic link
