--- a/gnome/src/Makefile.am
+++ b/gnome/src/Makefile.am
@@ -80,3 +80,5 @@ install-exec-local:
 
 uninstall-local:
 	-test -h $(DESTDIR)$(bindir)/sflphone && rm $(DESTDIR)$(bindir)/sflphone
+
+-include $(top_srcdir)/git.mk
