--- a/gnome/src/dbus/Makefile.am
+++ b/gnome/src/dbus/Makefile.am
@@ -41,3 +41,5 @@ libdbus_la_CFLAGS= $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) \
 
 EXTRA_DIST= marshaller.list
 CLEANFILES= $(BUILT_SOURCES)
+
+-include $(top_srcdir)/git.mk
