--- a/gnome/src/messaging/Makefile.am
+++ b/gnome/src/messaging/Makefile.am
@@ -9,3 +9,5 @@ libmessaging_la_LDFLAGS = $(GTK_LDFLAGS)  $(GLIB_LDFLAGS) $(DBUSGLIB_LDFLAGS)
 libmessaging_la_LIBADD = @GTK_LIBS@ @GLIB_LIBS@ $(DBUSGLIB_LIBS)
 
 libmessaging_la_CFLAGS = @GTK_CFLAGS@ @GLIB_CFLAGS@ @DBUSGLIB_CFLAGS@
+
+-include $(top_srcdir)/git.mk
