--- a/gnome/po/POTFILES.in
+++ b/gnome/po/POTFILES.in
@@ -13,10 +13,10 @@ src/config/hooks-config.c
 src/config/preferencesdialog.c
 src/config/shortcuts-config.c
 src/config/tlsadvanceddialog.c
+src/config/videoconf.c
 src/config/zrtpadvanceddialog.c
 src/contacts/searchbar.c
 src/dbus/dbus.c
-src/eel-gconf-extensions.c
 src/main.c
 src/mainwindow.c
 src/sflnotify.c
