gnome: fix make distcheck

--- a/gnome/Makefile.am
+++ b/gnome/Makefile.am
@@ -8,12 +8,12 @@ ui_DATA=src/ui.xml
 
 dist_noinst_DATA = $(gsettings_in_file)
 
-EXTRA_DIST  = sflphone.desktop.in gnome-doc-utils.make m4 $(ui_DATA) $(apps_DATA)
+EXTRA_DIST  = sflphone.desktop.in m4 $(ui_DATA) $(apps_DATA)
 appsdir = $(datadir)/applications
 apps_in_files = sflphone.desktop.in
 apps_DATA = $(apps_in_files:.desktop.in=.desktop)
 
-DISTCLEANFILES= sflphone.desktop gnome-doc-utils.make
+DISTCLEANFILES= sflphone.desktop
 
 MAINTAINERCLEANFILES = \
 						$(srcdir)/INSTALL \
