gnome: fix dbus test

--- a/gnome/tests/Makefile.am
+++ b/gnome/tests/Makefile.am
@@ -1,7 +1,7 @@
 include ../globals.mak
 
 TESTS = check_global check_contacts check_config check_dbus
-TESTS_ENVIRONMENT=GSETTINGS_SCHEMA_DIR="$(top_builddir)/data:${XDG_DATA_DIRS}"
+TESTS_ENVIRONMENT = GSETTINGS_SCHEMA_DIR=../data
 check_PROGRAMS = check_global check_contacts check_config check_dbus
 
 SFLPHONE_LIBS= $(top_builddir)/src/libsflphone_client.la \
