--- a/gnome/src/Makefile.am
+++ b/gnome/src/Makefile.am
@@ -50,8 +50,9 @@ libsflphone_client_la_SOURCES = \
   history_loader.c \
   history_loader.h \
   sflphone_client.h \
-  sflphone_client.c
-
+  sflphone_client.c \
+  sflphone_options.c \
+  sflphone_options.h
 
 libsflphone_client_la_LIBADD = @CLUTTER_LIBS@ @CLUTTERGTK_LIBS@ $(SFLPHONE_LIBS)
 libsflphone_client_la_LDFLAGS = @CLUTTER_LDFLAGS@ @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBS@ \
