--- a/tools/build-system/launchpad/sflphone-client-gnome-video/debian/control
+++ b/tools/build-system/launchpad/sflphone-client-gnome-video/debian/control
@@ -2,7 +2,7 @@ Source: sflphone-client-gnome-video
 Maintainer: SavoirFaireLinux Inc <julien.bonjean@savoirfairelinux.com>
 Section: gnome
 Priority: optional
-Build-Depends: debhelper, libgcc1, autoconf, automake, libtool, libgconf2-dev, libgtk-3-dev, libdbus-glib-1-dev, libnotify4-dev | libnotify-dev (>= 0.7), check, liblog4c-dev, gnome-doc-utils, rarian-compat, libwebkitgtk-3.0-dev, librsvg2-common, libclutter-1.0-dev, libclutter-gtk-1.0-dev
+Build-Depends: debhelper, libgcc1, intltool, autopoint, autoconf, automake, libtool, libgconf2-dev, libgtk-3-dev, libdbus-glib-1-dev, libnotify4-dev | libnotify-dev (>= 0.7), check, liblog4c-dev, gnome-doc-utils, rarian-compat, libwebkitgtk-3.0-dev, librsvg2-common, gnome-common, yelp-tools, libclutter-1.0-dev, libclutter-gtk-1.0-dev
 Standards-Version: 3.7.3
 
 Package: sflphone-client-gnome-video
