* #20627: daemon: fix autogen warnings

--- a/daemon/doc/dbus-api/Makefile.am
+++ b/daemon/doc/dbus-api/Makefile.am
@@ -21,7 +21,7 @@ doc/spec/index.html: $(XMLS) tools/doc-generator.py tools/specparser.py $(TEMPLA
 
 doc:	$(GENERATED_FILES)
 
-clean:	
+clean-local:
 	rm -rf $(GENERATED_FILES)
 	rm -rf doc/spec
 	rm -rf tmp
