* #20736: daemon: cleanup coverage flags

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -35,6 +35,7 @@ coverage:
 coverage-clean:
 	$(AM_V_at)lcov --directory $(top_builddir) --zerocounters
 	$(AM_V_at)rm -rf sflphone-coverage.info
+	$(AM_V_at)rm -rf html-output
 	$(AM_V_at)find -name '*.gcda' -exec rm -f {} +
 	$(AM_V_at)find -name '*.gcno' -exec rm -f {} +
 
