--- a/daemon/src/audio/Makefile.am
+++ b/daemon/src/audio/Makefile.am
@@ -14,6 +14,7 @@ SFL_SPEEXDSP_HEAD=noisesuppress.h
 endif
 
 libaudio_la_SOURCES = \
+		audiobuffer.cpp \
 		audioloop.cpp \
 		ringbuffer.cpp \
 		mainbuffer.cpp \
@@ -28,6 +29,7 @@ libaudio_la_SOURCES = \
 		dcblocker.cpp
 
 noinst_HEADERS = \
+		audiobuffer.h \
 		audioloop.h \
 		ringbuffer.h \
 		mainbuffer.h \
