--- a/tools/build-system/launchpad/sflphone-client-gnome/debian/control
+++ b/tools/build-system/launchpad/sflphone-client-gnome/debian/control
@@ -2,7 +2,7 @@ Source: sflphone-client-gnome
 Maintainer: SavoirFaireLinux Inc <julien.bonjean@savoirfairelinux.com>
 Section: gnome
 Priority: optional
-Build-Depends: debhelper, libgcc1, intltool, autopoint, autoconf, automake, libtool, libgconf2-dev, libgtk-3-dev, libdbus-glib-1-dev, libnotify4-dev | libnotify-dev (>= 0.7), check, liblog4c-dev, gnome-doc-utils, rarian-compat, libwebkitgtk-3.0-dev, librsvg2-common, yelp-tools, gnome-common
+Build-Depends: debhelper, libgcc1, intltool, autopoint, autoconf, automake, libtool, libgtk-3-dev, libdbus-glib-1-dev, libnotify4-dev | libnotify-dev (>= 0.7), check, gnome-doc-utils, rarian-compat, librsvg2-common, yelp-tools, gnome-common
 Standards-Version: 3.7.3
 
 Package: sflphone-client-gnome
