Presence: adding support for IP2IP
Presence notificaton for IP2IP
DBUS methods for publishing presence
Adding phone status (ringing,on the phone,ready)

--- a/daemon/src/sip/Makefile.am
+++ b/daemon/src/sip/Makefile.am
@@ -18,7 +18,8 @@ libsiplink_la_SOURCES = \
 		sipbuddy.cpp \
 		sipbuddy.h \
 		sipvoip_pres.cpp \
-		sipvoip_pres.h
+		sipvoip_pres.h \
+		ServerPresenceSub.h
 
 if BUILD_SDES
 libsiplink_la_SOURCES+= sdes_negotiator.cpp \
