* #25537: daemon/dbus renamed daemon/client

--- a/daemon/src/client/Makefile.am
+++ b/daemon/src/client/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/globals.mak
 
-noinst_LTLIBRARIES = libdbus.la
+noinst_LTLIBRARIES = libclient.la
 
 BUILT_SOURCES=                      \
     callmanager-glue.h              \
@@ -25,24 +25,24 @@ configurationmanager-glue.h: configurationmanager-introspec.xml Makefile.am
 instance-glue.h: instance-introspec.xml Makefile.am
 	dbusxx-xml2cpp $< --adaptor=$@
 
-libdbus_la_SOURCES = \
+libclient_la_SOURCES = \
     callmanager.cpp \
     configurationmanager.cpp  \
     instance.cpp  \
     client.cpp
 
 if SFL_VIDEO
-libdbus_la_SOURCES+=video_controls.cpp
+libclient_la_SOURCES+=video_controls.cpp
 endif
 
 if USE_NETWORKMANAGER
-libdbus_la_SOURCES += networkmanager.cpp
+libclient_la_SOURCES += networkmanager.cpp
 NETWORKMANAGER=-DUSE_NETWORKMANAGER
 else
 NETWORKMANAGER=
 endif
 
-libdbus_la_CXXFLAGS = \
+libclient_la_CXXFLAGS = \
             -DPREFIX=\"$(prefix)\" \
             -DPROGSHAREDIR=\"${datadir}/sflphone\" \
             $(NETWORKMANAGER)
