Gnome Presence : handler of dbus signal
adding of presence callback for signal newPresenceNotification

--- a/gnome/.gitignore
+++ b/gnome/.gitignore
@@ -111,7 +111,7 @@
 /po/insert-header.sin
 /po/quot.sed
 /po/remove-potcdate.sin
-/po/sflphone-client-gnome.pot
+/po/sflphone.pot
 /po/stamp-it
 /sflphone.desktop
 /so_locations
