* #26839: client: move callmanager.h into client

--- a/daemon/src/client/dbus/Makefile.am
+++ b/daemon/src/client/dbus/Makefile.am
@@ -49,7 +49,7 @@ libclient_la_CXXFLAGS = -I../ \
 
 
 noinst_HEADERS =            \
-    callmanager.h           \
+    ../callmanager.h        \
     configurationmanager.h  \
     instance.h              \
     ../client.h             \
