* #26839: client: move configurationmanager.h into client/

--- a/daemon/src/client/dbus/Makefile.am
+++ b/daemon/src/client/dbus/Makefile.am
@@ -50,7 +50,7 @@ libclient_la_CXXFLAGS = -I../ \
 
 noinst_HEADERS =            \
     ../callmanager.h        \
-    configurationmanager.h  \
+    ../configurationmanager.h  \
     instance.h              \
     ../client.h             \
     networkmanager_proxy.h  \
