--- a/daemon/configure.ac
+++ b/daemon/configure.ac
@@ -185,13 +185,12 @@ AM_CONDITIONAL(BUILD_ZRTP, test "x$with_zrtp" = "xyes" )
 
 # DBUSCPP
 dnl Check for dbuscpp, the C++ bindings for D-Bus
-DBUS_CPP_MIN_VERSION=0.6.0-pre1
 AC_ARG_WITH([dbus],
     [AS_HELP_STRING([--without-dbus], [disable support for dbus])],
     [],
     [with_dbus=yes])
 AS_IF([test "x$with_dbus" = "xyes"], [
-    PKG_CHECK_MODULES(DBUSCPP, dbus-c++-1 >= DBUS_CPP_MIN_VERSION,, AC_MSG_WARN([Missing dbus development package: libdbuscpp-dev]))
+    PKG_CHECK_MODULES(DBUSCPP, dbus-c++-1,, AC_MSG_WARN([Missing dbus development package: libdbuscpp-dev]))
     ]);
 
 AC_DEFINE_UNQUOTED([HAVE_DBUS], `if test "x$with_dbus" = "xyes"; then echo 1; else echo 0; fi`, [Define if you have dbus support])
