* #27352: daemon: add DBUSCPP CFlags to appropriate Makefiles

--- a/daemon/src/client/dbus/Makefile.am
+++ b/daemon/src/client/dbus/Makefile.am
@@ -45,8 +45,8 @@ endif
 libclient_la_CXXFLAGS = -I../ \
             -DPREFIX=\"$(prefix)\" \
             -DPROGSHAREDIR=\"${datadir}/sflphone\" \
-            $(NETWORKMANAGER)
-
+            $(NETWORKMANAGER) \
+            $(DBUSCPP_CFLAGS)
 
 noinst_HEADERS =            \
     ../callmanager.h        \
