* #27552: launchpad: add packages for 13.10 saucy salamander

--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -33,6 +33,13 @@ incoming = ~savoirfairelinux/ubuntu/raring
 login = anonymous
 allow_unsigned_uploads = 0
 
+[sflphone-saucy]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/ubuntu/saucy
+login = anonymous
+allow_unsigned_uploads = 0
+
 [sflphone-nightly-natty]
 fqdn = ppa.launchpad.net
 method = ftp
@@ -58,6 +65,13 @@ allow_unsigned_uploads = 0
 fqdn = ppa.launchpad.net
 method = ftp
 incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/raring
+login = anonymous
+allow_unsigned_uploads = 0
+
+[sflphone-nightly-saucy]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/saucy
 login = anonymous
 allow_unsigned_uploads = 0
 
