--- a/daemon/src/video/test/Makefile.am
+++ b/daemon/src/video/test/Makefile.am
@@ -17,6 +17,6 @@ test_v4l2_LDADD=$(top_builddir)/src/libsflphone.la $(top_builddir)/src/video/lib
 
 test_shm_SOURCES=test_shm.cpp shm_src.cpp shm_src.h
 test_shm_LDADD=$(top_builddir)/src/libsflphone.la $(top_builddir)/src/video/libvideo.la $(YAML_LIBS)
-test_shm_CXXFLAGS=$(AM_CXXFLAGS) -std=c++0x
+test_shm_CXXFLAGS=$(AM_CXXFLAGS)
 
 AM_CXXFLAGS=-I$(top_builddir)/src/video -I$(top_builddir)/src
