#28512: Video mixer implementation and related.
- Implement VideoSource and VideoGenerator classes to help VideoMixer class creation
- VideoMixe class started (not functionnal yet).
- VideoSendThread uses VideoSource API.
- VideDecoder implements VideoGenerator.
- VideoPreview and VideoMixer implement VideoSource.

--- a/daemon/src/video/Makefile.am
+++ b/daemon/src/video/Makefile.am
@@ -11,6 +11,7 @@ libvideo_la_SOURCES = \
 	video_scaler.cpp video_scaler.h \
 	video_decoder.cpp video_decoder.h \
 	video_encoder.cpp video_encoder.h \
+	video_mixer.cpp video_mixer.h \
 	socket_pair.cpp socket_pair.h \
 	shm_sink.cpp shm_sink.h \
 	video_preview.cpp video_preview.h \
