* #28472 : Rename all subscribers/buddies related variables. Limit the * size of these lists. Add a tmp fake status for IP2IP subscription. * Change loops to fit c++ 11. Remove code from Manager class.

--- a/daemon/src/sip/Makefile.am
+++ b/daemon/src/sip/Makefile.am
@@ -17,10 +17,10 @@ libsiplink_la_SOURCES = \
 		sip_utils.h \
 		sippresence.cpp \
 		sippresence.h \
-		sipbuddy.cpp \
-		sipbuddy.h \
-		presence_subscription.cpp\
-		presence_subscription.h\
+		pres_sub_server.cpp\
+		pres_sub_server.h\
+		pres_sub_client.cpp\
+		pres_sub_client.h\
 		sippublish.cpp\
 		sippublish.h
 if BUILD_SDES
